workloads/nginx-demo/nginx.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    run: nginx
  name: nginx
  annotations:
    fluxcd.io/automated: 'true'
spec:
  replicas: 2
  selector:
    matchLabels:
      run: nginx
  strategy: {}
  template:
    metadata:
      labels:
        run: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:latest
        ports:
        - containerPort: 80
        volumeMounts:
        - mountPath: /usr/share/nginx/html
          name: web-content
        resources:
          limits:
            memory: 512M
          requests:
            memory: 512M
            cpu: .5
      volumes:
      - name: web-content
        emptyDir: {}
---
