workloads/nginx-demo/nginx-service.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx
spec:
  ports:
  - name: http
    port: 8080
    targetPort: 80
  selector:
    run: nginx

---
