workloads/nginx-demo/nginx-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress
  labels:
    ingress: nginx
  annotations:
    external-dns.alpha.kubernetes.io/hostname: fmep.cmcloudlab234.info
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-staging"
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  tls:
  - hosts:
    - fmep.cmcloudlab234.info
    secretName: fmep-tls
  rules:
  - host: fmep.cmcloudlab234.info
    http:
      paths:
      - path: /
        backend:
          serviceName: nginx
          servicePort: 8080

---
